...
        button.layer.masksToBounds = true
        button.layer.cornerRadius = 16
        
        button.setTitle("Войти", for: .normal)
        button.setTitleColor(Res.Colors.background, for: .normal)
        button.titleLabel?.font = UIFont.systemFont(ofSize: 17, weight: .bold)
        button.accessibilityIdentifier = "Authenticate"
        button.addTarget(self,
                         action: #selector(buttonTapped),
                         for: .touchUpInside)
        
    }
    
...
