...

extension SingleImageViewController {
    private func configureAppearance(){
        scrollView.backgroundColor = Res.Colors.background
        
        backButton.tintColor = .white
        backButton.accessibilityIdentifier = "BackButton"
        backButton.setImage(Res.Images.SingleView.backButton, for: .normal)
        backButton.addTarget(self,
                             action: #selector(didTapBackButton),
                             for: .touchUpInside)
        
        singleImageView.contentMode = .scaleAspectFill
...
