...
extension WebViewViewController {
    
    private func configureAppearance() {
        view.backgroundColor = .white
        
        webView.backgroundColor = .white
        webView.accessibilityIdentifier = "UnsplashWebView"
        
        backButton.tintColor = Res.Colors.background
        backButton.setImage(Res.Images.WebView.backNavButton, for: .normal)
        backButton.addTarget(self,
                             action: #selector(didTapBackButton),
                             for: .touchUpInside)
...
